client/src/App.css
.App, #root {
  text-align: center;
  min-height: 100%;
  height: 100%;
}

.App-header {
  background-color: purple;
  height: 60px;
  padding: 7px;
  color: white;
}

.App-intro {
  font-size: large;
}


.errMsg {
  color: red;
  font-size: 12px;
  text-align: left;
}


.form-input {
  border-radius: .28571429rem !important;
  border-color: rgba(34, 36, 38, 0.15) !important;
}

.navbar-section i{
  font-size: 1.2rem;
}

.form-label {
  text-align: left;
  font-weight: 700;
}


.ui.label {
  font-weight: 500;
  height: fit-content;
}

.form-input {
  font-size: 1rem !important;

}

.calendar {
  text-align: start;
}

.calendar input {
  border-radius: 4px !important;
  padding: 5px;
  border: 0.697917px solid rgba(34, 36, 38, 0.15);
}

summary, .accordian-body {
  text-align: left;
}

.milestoneStyle .mtitle {
  font-weight: 700;
  cursor: pointer;
  margin-top: 20px;
  font-size: large;
}

.assignDropdown .dropdown {
  padding-right: 0px !important;
  padding-bottom: 0px !important;
  padding-left: 0.4rem !important;
}

.assignDropdown .dropdown {
  min-height: 25px !important;
}

.assignDropdown, .statusDropdown {
  padding-left : 0.4rem !important;
}

.container_table {
  width: 100%;
  overflow-x: scroll;  /* or auto */
}

.ui.table {
  margin-bottom: 0px !important;
}

.form-horizontal {
  padding-left: 15px !important;
  padding-right: 15px !important;
}

.statusDropdown div.default.text {
  color: black !important;
}

.grey {
  color: #aca8a8;
  font-weight: 700;
}

.purple {
  color: #00aeff;
  font-weight: 700;
}

.green {
  color: #09dc09;
  font-weight: 700;
}

.red {
  color: #ff2828;
  font-weight: 700;
}

.progress .label {
  background-color: white !important;
  font-weight: normal !important;
}

.noMarginCell .progress {
  margin-bottom: 0px !important;
}

.commentStyle {
  padding: 15px;
}

.tile-title {
  margin-bottom: 7px !important;
}

.commentStyle .avatar {
  width: 40px !important;
  height: 40px !important;
}

.sb-avatar__text {
  background-color: rgb(163, 51, 200) !important;
}

.lineStyle {
  border-color: rgb(218, 222, 228);
    border-style: solid;
    border-width: 0.05rem;
}

.notificationStyle {
  padding: 5px 10px;
  overflow-wrap: normal;
  font-size: 14px;
  color: black;
  cursor: pointer;
  overflow-x: hidden;
  max-width: 20em;
  width: 20em;
  vertical-align: middle;
}

.notificationStyle .text {
  white-space: normal;
}

.notificationStyle .item:hover {
  background-color: rgb(240, 240, 240);
}
.unreadStyle {
  background-color: white;
  color: purple;
  font-weight: 900;
  top: -7px;
  padding: 0px 6px 1px 5px;
  font-size: 16px;
}

.clearStyle {
  text-align: center;
  color: purple;
}

.planStyle:hover {
  background-color: rgb(240, 240, 240);
}
.planStyle .text{
  white-space: normal;
}

.planStyle {
  padding: 5px 10px;
  overflow-wrap: normal;
  font-size: 14px;
  color: black;
  cursor: pointer;
  overflow-x: hidden;
  max-width: 20em;
  width: 20em;
  border-bottom: 1px solid rgb(240, 240, 240);
}

.planDropdown {
  border: 1px solid rgb(119, 118, 118);
  border-radius: .28571429rem;
  width: 100%;
  font-size: 14px;
  padding: 5px 10px;
}

.chartStyle {
 margin: 10px auto;
}

 #reactgooglegraph-2, #reactgooglegraph-1 {
  border: 1px solid #c9c7c7 !important;
 }

